@@ -793,10 +793,10 @@ namespace lua {
 		const char* ProceduralItemManagerMT = "ProceduralItemManager";
 		const char* RngMT = "RNG";
 		const char* RoomMT = "Room";
+		const char* RoomConfigSetMT = "RoomConfigSet";
 		const char* RoomConfigStageMT = "RoomConfigStage";
 		const char* RoomDescriptorDoors = "RoomDescriptorDoors";
 		const char* RoomDescriptorDoorsConst = "RoomDescriptorDoorsConst";
-		const char* RoomSetMT = "RoomSet";
 		const char* RoomTransitionMT = "RoomTransition";
 		const char* SaveMenuMT = "SaveMenu";
 		const char* ScoreSheetMT = "ScoreSheet";
