@@ -11,11 +11,19 @@ Additions:
 		new optional boolean (IgnoreBlock), ignores collectible block when set to true
 * Input:
 	- GetDeviceNameByIdx
+* Isaac:
+	- StartNewGame(int playertype, int challenge, int difficulty, int seed), allows starting the game from within the main menu
 * MenuManager:
 	- SetInputMask(int mask) for use with the new ButtonActionBitwise enum, selectively allows/disallows the game's menu read certain inputs, useful for custom menus
 	- GetInputMask()
-* Isaac:
-	- StartNewGame(int playertype, int challenge, int difficulty, int seed), allows starting the game from within the main menu
+* RoomConfig:
+	RoomConfig:GetStage(StbType)
+* RoomConfigStage
+	* Get/Set DisplayName, Suffix, PlayerSpot, BossSpot, Music, Backdrop
+	* GetRoomSet(Mode)
+* RoomConfigSet:
+	* Acts like other ArrayProxy classes, but for RoomConfigRoom
+	* __len and Get method, Size const variable
 /newline/
 v1.0.8c - 
 Fixes:
